build: open java.lang for legacy gmaven plugins